--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <div class="container">
 <header>
-	<h1> CSS Shadow Effectsgjjjhjh </h1>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque aliquid temporibus possimus esse cupiditate. Dolorem animi maxime corporis! Vero sapiente ab soluta illum quam illo iste explicabo ut fugiat sit!</p>
+	<h1> CSS Shadow Effects </h1>
+	
 </header>
 	<div class="main">
 		<h2> CSS Shadow Effects</h2>
